ubah pustaka cik

--- a/Tugas_Akhir_Latex_Source/halaman-depan/pengesahan.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/pengesahan.tex
@@ -46,11 +46,11 @@
   \namaDosenPembimbingDua            & (Pembimbing II)                     \\
   NIP: \nipDosenPembimbingDua     &                                     \\
                            & ................................... \\
-  nama penguji{}.          & (Penguji I)                         \\
-  NIP: nip penguji{}   &                                     \\
+  Dr. Faridawati, M.Si.          & (Penguji I)                         \\
+  NIP: 1990201812014   &                                     \\
                            & ................................... \\
-  nama penguji{}.          & (Penguji II)                        \\
-  NIP: nip penguji{}   &                                     \\
+  Fahmi Astuti, Ph.D.          & (Penguji II)                        \\
+  NIP: 198003302012122002   &                                     \\
                            & ................................... \\
 \end{tabularx}
 \endgroup
