--- a/Tugas_Akhir_Latex_Source/konten/bab01.tex
+++ b/Tugas_Akhir_Latex_Source/konten/bab01.tex
@@ -12,9 +12,9 @@
 \section{Latar Belakang}
 Penemuan grafena (\textit{graphene}) pada tahun 2004 oleh \cite{Novoselov2004} dan \cite{Geim2007} memicu revolusi dalam ilmu material, membuka era eksplorasi intensif terhadap material dua dimensi (2D). Material-material ini, yang memiliki ketebalan hanya satu atau beberapa lapis atom, menunjukkan sifat-sifat fisika yang unik dan seringkali berbeda secara fundamental dari material induknya dalam bentuk tiga dimensi (3D). Di antara berbagai material 2D, boron nitrida heksagonal (hBN) menonjol sebagai analog struktural dari grafena. Keduanya memiliki struktur kisi sarang lebah yang serupa, namun dengan sifat elektronik yang sangat kontras.
 
-Secara intrinsik, hBN adalah sebuah isolator celah pita lebar, dengan celah pita energi eksperimental sekitar 6 eV. Sifat ini menjadikannya kandidat ideal untuk aplikasi sebagai substrat dielektrik ultra-tipis dan lapisan enkapsulasi dalam perangkat nanoelektronika, terutama untuk meningkatkan performa perangkat berbasis grafena dengan meminimalkan hamburan dari substrat \citep{Dean2010}.
+Secara intrinsik, hBN adalah sebuah isolator celah pita lebar, dengan celah pita energi eksperimental sekitar 6 eV. Sifat ini menjadikannya kandidat ideal untuk aplikasi sebagai substrat dielektrik ultra-tipis dan lapisan enkapsulasi dalam perangkat nanoelektronika, terutama untuk meningkatkan performa perangkat berbasis grafena dengan meminimalkan hamburan dari substrat \cite{Dean2010}.
 
-Lebih dari sekadar komponen pasif, sifat-sifat intrinsik hBN dapat dimodifikasi secara dramatis. Dua mekanisme pengendalian yang paling berpengaruh adalah perlakuan termal dan rekayasa cacat. Studi terdahulu telah menunjukkan bahwa pemrosesan pada temperatur tinggi dapat menginduksi pembentukan cacat titik, rekonstruksi permukaan, dan redistribusi muatan, yang pada akhirnya mengubah sifat elektronik dan optik material \citep{Zhang2020, Huang2012}. Kehadiran cacat, baik yang diinduksi secara termal maupun yang sengaja dibuat, dapat menciptakan keadaan elektronik terlokalisasi di dalam celah pita, secara efektif mengubah hBN dari isolator menjadi semikonduktor atau bahkan material dengan sifat fungsional baru.
+Lebih dari sekadar komponen pasif, sifat-sifat intrinsik hBN dapat dimodifikasi secara dramatis. Dua mekanisme pengendalian yang paling berpengaruh adalah perlakuan termal dan rekayasa cacat. Studi terdahulu telah menunjukkan bahwa pemrosesan pada temperatur tinggi dapat menginduksi pembentukan cacat titik, rekonstruksi permukaan, dan redistribusi muatan, yang pada akhirnya mengubah sifat elektronik dan optik material \cite{Zhang2020, Huang2012}. Kehadiran cacat, baik yang diinduksi secara termal maupun yang sengaja dibuat, dapat menciptakan keadaan elektronik terlokalisasi di dalam celah pita, secara efektif mengubah hBN dari isolator menjadi semikonduktor atau bahkan material dengan sifat fungsional baru.
 
 Untuk menyelidiki fenomena kompleks ini, pendekatan komputasi multi-skala yang menggabungkan Dinamika Molekuler (MD) dan Teori Fungsional Kerapatan (DFT) telah menjadi alat yang sangat ampuh. MD memungkinkan simulasi evolusi struktur atomik di bawah pengaruh termal, sementara DFT menyediakan perhitungan sifat elektronik dan magnetik dari prinsip pertama untuk struktur yang dihasilkan. Namun, kekuatan prediksi dari alur kerja komputasi ini sangat bergantung pada akurasi model fisika yang mendasarinya, yaitu potensial interatomik yang digunakan dalam MD dan fungsional tukar-tambah-hubungan dalam DFT. Setiap keterbatasan dalam model-model ini dapat merambat dan berpotensi menghasilkan artefak komputasi.
 
