--- a/Tugas_Akhir_Latex_Source/main.tex
+++ b/Tugas_Akhir_Latex_Source/main.tex
@@ -93,7 +93,7 @@
     \renewcommand{\bibname}{DAFTAR PUSTAKA}
     \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
     %\bibliographystyle{unsrt} % untuk style dengan nomor
-    \bibliographystyle{plainnat} % untuk style dengan nama
+    \bibliographystyle{format-pustaka} % untuk style dengan nama
     \bibliography{pustaka}
     
 %---------------------------------------------------------------------
