--- a/Tugas_Akhir_Latex_Source/pengaturan.tex
+++ b/Tugas_Akhir_Latex_Source/pengaturan.tex
@@ -21,7 +21,6 @@
 \usepackage{rotating}
 \usepackage{colortbl}       % Tambahan untuk mendukung \rowcolor dan \cellcolor
 \usepackage{pgfgantt} 
-\usepackage[bahasa]{babel}
 \usepackage{fontenc}
 \usepackage{setspace}
 \onehalfspacing
@@ -178,7 +177,7 @@
 %   Mengatur tentang format referensi
 %======================================================================
 
-\usepackage[square]{natbib}
+\usepackage[round]{natbib}
 
 %======================================================================
 %   Mengatur template untuk menulis code
