--- a/Tugas_Akhir_Latex_Source/pustaka.bib
+++ b/Tugas_Akhir_Latex_Source/pustaka.bib
@@ -47,7 +47,7 @@
 	year         = 1970,
 	publisher    = {McGraw-Hill},
 	address      = {New York},
-	edition      = {3rd}
+	edition      = {3}
 }
 @article{Geim2013,
 	title        = {Van der Waals Heterostructures},
@@ -276,7 +276,7 @@
 	year         = 2001,
 	publisher    = {Academic Press},
 	address      = {San Diego},
-	edition      = {2nd}
+	edition      = {2}
 }
 @book{Rapaport2004,
 	title        = {The Art of Molecular Dynamics Simulation},
@@ -284,7 +284,7 @@
 	year         = 2004,
 	publisher    = {Cambridge University Press},
 	address      = {Cambridge},
-	edition      = {2nd}
+	edition      = {2}
 }
 @article{Becke1993,
 	title        = {Density-Functional Thermochemistry. {III}. The Role of Exact Exchange},
@@ -772,7 +772,7 @@
 	title        = {File:Pseudopotential.png --- Wikimedia Commons{,} the free media repository},
 	author       = {Wikimedia Commons},
 	year         = 2025,
-	url          = {https://commons.wikimedia.org/w/index.php?title=File:Pseudopotential.png&oldid=997216778},
+	url 		 = {https://commons.wikimedia.org/w/index.php?title=File:Pseudopotential.png\&oldid=997216778},
 	note         = {[Online; accessed 16-June-2025]}
 }
 @article{perdew2005,
