--- a/Tugas_Akhir_Latex_Source/halaman-depan/abstrak.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/abstrak.tex
@@ -36,7 +36,7 @@
 %---------------------------------------------------------------------
 
 {\singlespacing\indent%
-Penelitian komputasi ini menginvestigasi pengaruh gabungan dari eksitasi termal dan cacat antisite (N$_B$, B$_N$) terhadap sifat elektronik dan magnetik dari monolayer boron nitrida heksagonal (hBN). Melalui pendekatan multi-skala, simulasi dinamika molekuler (MD) digunakan untuk menghasilkan struktur yang setimbang secara termal pada 800 K, 1100 K, dan 1225 K. Struktur ini kemudian dianalisis dengan Teori Fungsional Kerapatan (DFT) untuk menentukan struktur pita dan keadaan magnetiknya. Hasil penelitian menunjukkan perilaku yang khas dan bergantung pada jenis cacat. hBN murni mengalami pergeseran merah (redshift) celah pita yang konvensional seiring kenaikan temperatur, sedangkan cacat N$_B$ menginduksi pergeseran biru (blueshift) yang anomali. Temuan paling signifikan adalah bahwa cacat B$_N$ memicu magnetisme $d^0$ yang teraktivasi oleh temperatur, di mana momen magnetiknya menguat pada temperatur lebih tinggi dimana kenaikan temperatur mempengaruhi kestabilan struktur dan pembentukan cacat pada hBN. Hal ini mengindikasikan adanya mekanisme kopling yang kuat antara vibrasi kisi dan spin, yang menyoroti jalur untuk merekayasa sifat hBN melalui perlakuan termal dan rekayasa cacat.
+Penelitian komputasi ini menginvestigasi pengaruh gabungan dari eksitasi termal dan cacat antisite (N$_B$, B$_N$) terhadap sifat elektronik dan magnetik dari monolayer boron nitrida heksagonal (hBN). Melalui pendekatan multi-skala, simulasi dinamika molekuler (MD) digunakan untuk menghasilkan struktur yang setimbang secara termal pada 800 K, 1100 K, dan 1225 K. Struktur ini kemudian dianalisis dengan Teori Fungsional Kerapatan (DFT) untuk menentukan struktur pita dan keadaan magnetiknya. Hasil penelitian menunjukkan perilaku yang khas dan bergantung pada jenis cacat. hBN murni mengalami pergeseran merah (redshift) celah pita yang konvensional seiring kenaikan temperatur, sedangkan cacat N$_B$ menginduksi pergeseran biru (blueshift) yang anomali. Temuan paling signifikan adalah bahwa cacat B$_N$ memicu magnetisme $d^0$ yang teraktivasi oleh temperatur, di mana momen magnetiknya menguat pada temperatur lebih tinggi yaitu sebesar 1.850$\mu_B$ saat temperatur mencapai 1225 K. Dimana kenaikan temperatur mempengaruhi kestabilan struktur dan pembentukan cacat pada hBN. Hal ini mengindikasikan adanya mekanisme kopling yang kuat antara vibrasi kisi dan spin, yang menyoroti jalur untuk merekayasa sifat hBN melalui perlakuan termal dan rekayasa cacat.
 }
 
 %---------------------------------------------------------------------
