--- a/Tugas_Akhir_Latex_Source/main.tex
+++ b/Tugas_Akhir_Latex_Source/main.tex
@@ -20,7 +20,7 @@
 %=====================================================================
 % FORMAT DAN PENGATURAN UMUM:
 %=====================================================================
-\documentclass[a4paper, 12pt, final, openright, oneside]{report}
+\documentclass[a4paper, 12pt, final, openright, twoside]{report}
 \input{pengaturan}
 \input{informasi}
 %=====================================================================
@@ -93,7 +93,7 @@
     \renewcommand{\bibname}{DAFTAR PUSTAKA}
     \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
     %\bibliographystyle{unsrt} % untuk style dengan nomor
-    \bibliographystyle{format-pustaka} % untuk style dengan nama
+    \bibliographystyle{apa-id} % untuk style dengan nama
     \bibliography{pustaka}
     
 %---------------------------------------------------------------------
