--- a/Tugas_Akhir_Latex_Source/pengaturan.tex
+++ b/Tugas_Akhir_Latex_Source/pengaturan.tex
@@ -177,7 +177,7 @@
 %   Mengatur tentang format referensi
 %======================================================================
 
-\usepackage[round]{natbib}
+\usepackage[round, authoryear]{natbib}
 
 %======================================================================
 %   Mengatur template untuk menulis code
